[package]
name = "rzdb"
version = "0.1.0"
authors = ["LeeSmet <lee.smet@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = { version = "0.31", features = ["compression"] }
tokio = { version = "0.2", features = ["io-driver", "io-util","net", "rt-core"] }
tokio-util = { version = "0.2", features = ["codec"] }
redis-protocol = "1"
futures = "0.3"
